<resources>
    <string name="app_name" translatable="false">CESAE Digital</string>
    <string name="registar">Registar</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="o_cesae_digital_promove_a_realizacao_de_formacao_profissional_e_de_reconhecimento_a_validacao_e_certificacao_de_competencias_a_prestacao_de_servicos_e_apoio_tecnico_a_entidades_no_ambito_das_areas_das_tecnologias_da_informacao_e_da_comunicacao_tic_e_do_digital_regista_te_para_saberes_mais_sobre_a_nossa_oferta_formativa">O CESAE Digital promove a realização de formação profissional e de reconhecimento, a validação e certificação de competências, a prestação de serviços e apoio técnico a entidades no âmbito das áreas das Tecnologias da Informação e da Comunicação (TIC) e do digital. \nRegista-te para saberes mais sobre a nossa oferta formativa!</string>
    <string name="cursos">Cursos</string>
    <string name="sobre">Sobre</string>
    <string name="title_activity_fullscreen_sobre" translatable="false">fullscreen</string>
    <string name="adicionar_curso">Adicionar Curso</string>
    <string name="nome">Nome:</string>
    <string name="local">Local:</string>
    <string name="inicio">Início:</string>
    <string name="fim">Fim:</string>
    <string name="preco">Preço:</string>
    <string name="duracao">Duração:</string>
    <string name="edicao">Edição:</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="curso_adicionado">Curso Adicionado</string>
    <string name="erro_curso_nao_adicionado">Erro: Curso não adicionado</string>
    <string name="id_imagem">ID Imagem:</string>
    <string name="imagem">Imagem</string>
    <string name="username" translatable="false">Username:</string>
    <string name="password" translatable="false">Password:</string>
    <string name="confirmar_password">Confirmar Password:</string>
    <string name="as_passwords_nao_correspondem_tente_novamente">As Passwords não correspondem! Tente novamente.</string>
    <string name="o_campo_de_username_nao_pode_estar_vazio">O campo de username não pode estar vazio.</string>
    <string name="login_errado_tente_novamente">Login errado! Tente novamente.</string>
    <string name="curso_eliminado">Curso eliminado</string>
    <string name="curso_nao_foi_eliminado">Curso não foi eliminado</string>
    <string name="ligue_o_som">Ligue o som</string>
    <string name="login_correto_bem_vindo">Login correto! Bem-vindo!</string>
    <string name="curso_editado_com_sucesso">Curso editado com sucesso</string>
    <string name="curso_nao_editado">Curso não editado</string>
    <string name="seleciona_a_imagem_do_curso">Seleciona a imagem do curso</string>
    <string name="remover_imagem">Remover Imagem</string>
    <string name="ordem_crescente">Ordem Crescente</string>
    <string name="ordem_decrescente">Ordem Decrescente</string>
    <string name="app_criada_por_ana_rita_amaral">App criada por: \nAna Rita Amaral</string>
    <string name="cancelar">Cancelar</string>
    <string name="voltar">Voltar</string>
    <string name="clica_aqui_para_saberes_mais">Clica aqui para saberes mais</string>
</resources>