<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.InfoCursoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_imagem"
        android:hint="@string/id_imagem"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_nome"
        android:hint="@string/nome"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_local"
        android:hint="@string/local"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_inicio"
        android:hint="@string/inicio"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_fim"
        android:hint="@string/fim"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_preco"
        android:hint="@string/preco"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_duracao"
        android:hint="@string/duracao"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_edicao"
        android:hint="@string/edicao"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:gravity="center" >
        <Button
            android:id="@+id/botao_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/editar" />
        <Button
            android:id="@+id/botao_eliminar"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminar" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"/>
</LinearLayout>