<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/azul_fundo"
    tools:context=".views.AddCursoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_curso"
        android:textSize="40sp"
        android:textColor="@color/rosa"
        android:textStyle="bold"
        android:fontFamily="casual" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/imagem"
        android:layout_marginVertical="10dp"
        android:src="@drawable/iconcesae"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:id="@+id/edit_nome"
            android:gravity="center"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:gravity="center"
            android:id="@+id/edit_local"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="133dp"
            android:gravity="center"
            android:id="@+id/edit_inicio"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="dd-MM-yyyy" />
        <!--android:inputType="date"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/fim"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="133dp"
            android:gravity="center"
            android:inputType="text"
            android:id="@+id/edit_fim"
            android:textSize="20sp"
            android:hint="dd-MM-yyyy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preco"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/edit_preco"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duracao"
            android:layout_marginStart="10dp"
            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:inputType="number"
            android:gravity="center"
            android:id="@+id/edit_duracao"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edicao"

            android:textSize="20sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="130dp"
            android:gravity="center"
            android:id="@+id/edit_edicao"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/button_adicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_curso"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#009DE2" />
        <Button
            android:id="@+id/button_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#5E1F6A" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="377dp"
            android:layout_height="152dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>