<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azul_fundo"
    android:gravity="center"
    tools:context=".views.RegistarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registar"
        android:textSize="40sp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/light_blue_600"
        android:textStyle="bold"
        android:fontFamily="casual" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:textColor="#6C6868" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_myplaces"
            android:minWidth="200dp" /> <!-- dimensão/largura mínima do elemento-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textColor="#6C6868" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@android:drawable/ic_lock_idle_lock"
            android:minWidth="200dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_password"
            android:textSize="20dp"
            android:textColor="#6C6868" />

        <EditText
            android:id="@+id/edit_confpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minWidth="200dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_registo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/light_blue_600"
            android:layout_marginHorizontal="10dp"
            android:padding="15dp"
            android:text="@string/registar"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#5E1F6A"
            android:padding="15dp"
            android:text="@string/cancelar"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="377dp"
            android:layout_height="152dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

</LinearLayout>