<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azul_fundo"
    android:gravity="center"
    tools:context=".views.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textSize="40sp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/rosa"
        android:textStyle="bold"
        android:fontFamily="casual" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:textColor="#6C6868" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="180dp"
            android:text="user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textColor="#6C6868" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minWidth="180dp"
            android:text="pass" />

        <ImageView
            android:id="@+id/imageMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_view" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:backgroundTint="#009DE2"
        android:padding="15dp"
        android:text="@string/entrar"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="79dp"
        app:srcCompat="?android:attr/fingerprintAuthDrawable" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="377dp"
            android:layout_height="152dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

</LinearLayout>